refactored my layouts

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,21 @@
     <string name="tab_text_2">Tab 2</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="submission_successful">Submission Successful</string>
+    <string name="checked_image">checked_image</string>
+    <string name="submission_not_successful">Submission not Successful</string>
+    <string name="alert_image">alert_image</string>
+    <string name="skill_iq_leader_badge">skill_iq_leader_badge</string>
+    <string name="toolbar_title">LEADERBOARD</string>
+    <string name="submit">Submit</string>
+    <string name="top_learner_badge">top_learner_badge</string>
+    <string name="are_you_sure">Are you sure</string>
+    <string name="yes">Yes</string>
+    <string name="close_button">Close button</string>
+    <string name="question_mark">Question mark</string>
+    <string name="project_on_github_link">Project on Github (link)</string>
+    <string name="email_address">Email Address</string>
+    <string name="full_name">Full Name</string>
+    <string name="last_name">Last Name</string>
+    <string name="project_submission">Project Submission</string>
 </resources>
