--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="yes">Yes</string>
     <string name="close_button">Close button</string>
     <string name="question_mark">Question mark</string>
-    <string name="project_on_github_link">Project on Github (link)</string>
+    <string name="project_on_github_link">Project on GITHUB (link)</string>
     <string name="email_address">Email Address</string>
     <string name="full_name">Full Name</string>
     <string name="last_name">Last Name</string>
