--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="question_mark">Question mark</string>
     <string name="project_on_github_link">Project on GITHUB (link)</string>
     <string name="email_address">Email Address</string>
-    <string name="full_name">Full Name</string>
+    <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
     <string name="project_submission">Project Submission</string>
 </resources>
